funcionalidades contar minutos jugados y sustituciones

--- a/public/css/SASS/herramienta.scss
+++ b/public/css/SASS/herramienta.scss
@@ -39,13 +39,18 @@
   height:100%;
 }
 .cuadro-jugador{
+  cursor:pointer;
   border-radius: 5px;
-  border: 1.5px solid #628941;
+  border: 1.5px solid $primary-color;
   min-height: 1.5em;
   padding: 2px;
   width:100%;
   margin: 10px 0;
+  &:hover{
+    background-color: $dark-primary-color;
+  }
 }
+
 .fila-jugadores{
   margin-top:20px;
 }
