--- a/public/css/mister.css
+++ b/public/css/mister.css
@@ -42,12 +42,16 @@
 }
 
 .cuadro-jugador {
+  cursor: pointer;
   border-radius: 5px;
-  border: 1.5px solid #628941;
+  border: 1.5px solid #009688;
   min-height: 1.5em;
   padding: 2px;
   width: 100%;
   margin: 10px 0;
+}
+.cuadro-jugador:hover {
+  background-color: #00796B;
 }
 
 .fila-jugadores {
