herramienta antes de probar viernes 30

--- a/public/css/SASS/_variables.scss
+++ b/public/css/SASS/_variables.scss
@@ -15,3 +15,8 @@ $dark-save-color:$dark-primary-color;
 $imagen-inicio-fondo:url('../../imagenes/fondos/fondo-equipo.jpg');
 
 
+$media:'only screen';
+
+$pantallaSmall:'(max-width:758px)';
+$pantallaMedia:'(max-width:990px)';
+$pantallaGrande:'(min-width:992px)';
