--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,9 +2,14 @@ html, body {
   font-family: "Gill Sans", sans-serif !important;
   color: #212121;
   height: 100%;
+  overflow: scroll;
 }
 
 /*------ CLASES GLOBALES ------*/
+.main-content {
+  overflow: auto;
+}
+
 .section {
   display: none;
 }
@@ -20,6 +25,14 @@ html, body {
 
 .border-secundario {
   border: 1px solid #B2DFDB;
+}
+
+.logout {
+  cursor: pointer;
+}
+
+.dropdown-menu {
+  padding: 15px;
 }
 
 .group-around {
@@ -256,8 +269,15 @@ html, body {
   border-color: #B2DFDB;
   box-shadow: 0 0 0 0.2rem #607D8B;
 }
+.form-group input:focus.error, .form-group select:focus.error {
+  border-color: #c36868;
+  box-shadow: 0 0 0 0.2remmist #884a4a;
+}
 .form-group label {
   color: #212121;
+}
+.form-group label.error {
+  color: red;
 }
 .form-group .btn-group {
   width: 100%;
@@ -280,7 +300,7 @@ html, body {
   padding: 10px 20px 0 20px;
 }
 .navegacion-menu i {
-  color: white;
+  color: #00796B;
   font-size: 1em;
   cursor: pointer;
 }
@@ -309,20 +329,6 @@ html, body {
 }
 .control-panel-icon i:hover {
   background-color: #B2DFDB;
-}
-
-.equipo-container {
-  margin-top: 50px;
-}
-
-.equipo-title {
-  padding-bottom: 20px;
-  width: 100%;
-  border-bottom: 1px solid #BDBDBD;
-}
-
-.add-player {
-  cursor: pointer;
 }
 
 /*# sourceMappingURL=main.css.map */
