--- a/public/css/mister.css
+++ b/public/css/mister.css
@@ -10,8 +10,6 @@
   transform: scale(1.1);
 }
 .iconos-iniciales .iconoContent .textoIcono {
-  color: white;
-  background-color: #009688;
   padding: 5px;
   border-radius: 5px;
   font-size: 2em;
@@ -76,10 +74,6 @@
   background-color: #00796B;
 }
 
-.alineacion-container .row {
-  margin-top: 10px;
-}
-
 .alineacion-title {
   font-size: 1.5em;
   font-weight: bold;
@@ -87,22 +81,201 @@
   border-bottom: 1px solid #BDBDBD;
 }
 
+.botones-alineacion {
+  border: 1px solid #425F6D;
+  border-radius: 5px;
+  padding: 0 10px 10px;
+}
+
 .equipo-container {
   margin-top: 50px;
 }
 
-.equipo-title {
-  padding-bottom: 20px;
-  width: 100%;
-  border-bottom: 1px solid #BDBDBD;
-}
-
 .add-player {
   cursor: pointer;
+  margin-left: 10px;
+  font-size: 1.5em;
 }
 
 .jugadores-equipo {
   text-align: center;
+}
+
+.tacticas-icon {
+  background-image: url("../../imagenes/campos/tacticas.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.add-tactica {
+  text-align: center;
+}
+.add-tactica-btn {
+  cursor: pointer;
+  border-radius: 5px;
+  background-color: #607D8B;
+  color: white;
+}
+.add-tactica-btn:hover {
+  background-color: #425F6D;
+}
+
+.jugadores-title {
+  justify-content: center;
+  align-items: center;
+}
+
+.jugadores-equipo {
+  justify-content: center;
+}
+.jugadores-equipo table {
+  border-collapse: separate;
+  border-spacing: 0 15px;
+  box-shadow: 4px 0 20px -2px rgba(58, 76, 122, 0.44);
+  background-color: white;
+  border-radius: 15px;
+  padding: 10px;
+}
+.jugadores-equipo table tr {
+  cursor: pointer;
+  background-color: white;
+}
+.jugadores-equipo table tr:hover {
+  background-color: #425F6D;
+}
+.jugadores-equipo table td {
+  border: 0.7px solid #B2DFDB;
+  border-left: none;
+  border-right: none;
+  vertical-align: middle;
+}
+.jugadores-equipo table td div.posicion {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  border-radius: 5px;
+  width: 40px;
+  height: 30px;
+}
+.jugadores-equipo table td div.posicion.PT {
+  background-color: #dfc12a;
+}
+.jugadores-equipo table td div.posicion.DF {
+  background-color: dodgerblue;
+}
+.jugadores-equipo table td div.posicion.MC {
+  background-color: green;
+}
+.jugadores-equipo table td div.posicion.DL {
+  background-color: red;
+}
+.jugadores-equipo table td div.foto {
+  width: 30px;
+}
+.jugadores-equipo table td div.foto img {
+  border-radius: 50%;
+}
+.jugadores-equipo table td div.nombre {
+  width: 80%;
+}
+.jugadores-equipo table td div.dorsal {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: grey;
+}
+
+/*------------ CAMPO CON LOS JUGADORES -------*/
+.equipo-content {
+  background-image: url("../../imagenes/campos/mediocampo.png");
+  background-position: top;
+  margin-left: -30px;
+  margin-right: -30px;
+  background-size: 150% 100%;
+  background-repeat: no-repeat;
+}
+@media only screen and (max-width:758px) {
+  .equipo-content {
+    height: 350px;
+  }
+}
+@media only screen and (max-width:990px) {
+  .equipo-content {
+    height: 400px;
+  }
+}
+@media only screen and (min-width:992px) {
+  .equipo-content {
+    height: 550px;
+  }
+}
+
+.fila-campo .contenido-jugador-campo {
+  height: 100%;
+  margin: 2px 10px;
+}
+.fila-campo .contenido-jugador-campo .imagen-jugador-campo {
+  height: 70%;
+  text-align: center;
+}
+.fila-campo .contenido-jugador-campo .imagen-jugador-campo img {
+  height: 100%;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.fila-campo .contenido-jugador-campo .nombre-jugador-campo {
+  text-align: center;
+}
+.fila-campo.portero {
+  grid-column: 3/4;
+  grid-row: 6/7;
+}
+.fila-campo.defensas {
+  grid-row: 5/6;
+  grid-column: 2/5;
+}
+.fila-campo.defensas .izquierdo {
+  grid-row: 4/5;
+  grid-column: 2/3;
+}
+.fila-campo.defensas .central {
+  grid-row: 5/6;
+  grid-column: 3/4;
+}
+.fila-campo.defensas .derecho {
+  grid-row: 4/5;
+  grid-column: 4/5;
+}
+.fila-campo.medios {
+  grid-row: 3/4;
+  grid-column: 2/5;
+}
+.fila-campo.medios.centro {
+  grid-column: 2/5;
+}
+.fila-campo.delanteros {
+  grid-row: 1/2;
+  grid-column: 3/4;
+}
+
+.campo-content {
+  display: grid;
+  padding-top: 60px;
+  padding-bottom: 100px;
+  grid-template-columns: 40px 90px auto 90px 40px;
+  grid-template-rows: 55px 55px 55px 55px 55px 55px;
+}
+@media only screen and (min-width:992px) {
+  .campo-content {
+    padding-top: 90px;
+    padding-bottom: 130px;
+  }
 }
 
 .cronometro {
@@ -138,20 +311,36 @@
   width: 100%;
   margin: 10px 0;
 }
+.cuadro-jugador.selected {
+  transform: scale(1.1);
+  background-color: #00796B;
+  color: white;
+}
 .cuadro-jugador:hover {
   background-color: #00796B;
+  color: white;
 }
-.cuadro-jugador.portero {
+.cuadro-jugador .info-cuadro {
+  color: white;
+  padding: 2px;
+}
+.cuadro-jugador .info-cuadro.portero {
   background-color: #bda605d1;
 }
-.cuadro-jugador.defensa {
+.cuadro-jugador .info-cuadro.defensa {
   background-color: #00a1ffb8;
 }
-.cuadro-jugador.medio {
+.cuadro-jugador .info-cuadro.medio {
   background-color: #05bd13d1;
 }
-.cuadro-jugador.delantero {
+.cuadro-jugador .info-cuadro.delantero {
   background-color: #bd2705d1;
+}
+
+.icono-minutos {
+  text-align: end;
+  margin-right: -5px;
+  color: #884a4a;
 }
 
 .fila-jugadores {
