--- a/public/css/mister.scss
+++ b/public/css/mister.scss
@@ -5,8 +5,8 @@
 
 /*----- INICIO -----*/
 .iconos-iniciales{
-  margin-top:150px;
   z-index:9999;
+  display:none;
   .iconoContent{
     margin:15px;
     &:hover{
@@ -16,6 +16,8 @@
       padding:5px;
       border-radius:5px;
       font-size:2em;
+      color:$dark-color-resaltado;
+      span{padding-left:10px;}
     }
   }
 }
