--- a/public/css/login.css
+++ b/public/css/login.css
@@ -31,4 +31,10 @@
   text-align: left;
 }
 
+.panel-success {
+  height: 80%;
+  overflow: scroll;
+  text-align: center;
+}
+
 /*# sourceMappingURL=login.css.map */
