--- a/public/css/SASS/layout.scss
+++ b/public/css/SASS/layout.scss
@@ -38,6 +38,14 @@ html,body{
   }
 }
 
+.panel-dbase{
+  border-radius:10px;
+  padding:20px;
+  -webkit-box-shadow: 0 0 16px -2px rgba(0,0,0,0.51);
+  -moz-box-shadow: 0 0 16px -2px rgba(0,0,0,0.51);
+  box-shadow: 0 0 16px -2px rgba(0,0,0,0.51);
+  &.white{background-color:white;}
+}
       /*----BOTONES-----*/
 
 .btn-principal{
