--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,6 +49,17 @@ html, body {
   }
 }
 
+.panel-dbase {
+  border-radius: 10px;
+  padding: 20px;
+  -webkit-box-shadow: 0 0 16px -2px rgba(0, 0, 0, 0.51);
+  -moz-box-shadow: 0 0 16px -2px rgba(0, 0, 0, 0.51);
+  box-shadow: 0 0 16px -2px rgba(0, 0, 0, 0.51);
+}
+.panel-dbase.white {
+  background-color: white;
+}
+
 /*----BOTONES-----*/
 .btn-principal {
   background-color: #607D8B;
